# aoc2023

day1/: p1.cpp  p2.cpp
day10/: main.cpp  p1.cpp
day11/: main.cpp  p2.cpp
day12/: main.cpp  p1.cpp  p2.cpp  p2_too_slow.cpp
day13/: p1.cpp  p2.cpp
day14/: main.cpp  p1.cpp
day15/: p1.cpp  p2.cpp
day16/: main.cpp  p1.cpp
day17/: p1.cpp  p2.cpp
day18/: main.cpp  p1.cpp  p2.cpp
day19/: main.cpp  p1.cpp  p2.cpp
day2/: main.cpp  p1.cpp
day20/: main.cpp  p1.cpp  p2.cpp
day21/: main.cpp  p1.cpp  s2.txt
day21_helper/: main.cpp
day22/: main.cpp  p1.cpp
day23/: main.cpp
day24/: 0.py  1.py  p1.py  p2.py
day25/: CMakeLists.txt  main.cpp
day3/: p1.cpp  p2.cpp
day4/: main.cpp  p1.cpp
day5/: main.cpp  p1.cpp
day6/: p1.cpp  p2.cpp
day7/: main.cpp  p1.cpp
day8/: p1.cpp  p2.cpp
day9/: main.cpp  p1.cpp
erick/: main.cpp
template/: CMakeLists.txt  mylibs.h
